unpackaged/main/default/objects/Job__c/fields/Earliest_Work_Order_Arrival_Window__c.field-meta.xml
<CustomField>
    <fullName>Earliest_Work_Order_Arrival_Window__c</fullName>
    <description>The Arrival Window for the Work Order for this Job that has the earliest &#39;Requested Date&#39;.</description>
    <formula>Earliest_Work_Order_by_Requested_Date__r.Arrival_Window__c</formula>
    <inlineHelpText>The Arrival Window for the Work Order for this Job that has the earliest &#39;Requested Date&#39;.</inlineHelpText>
    <label>Earliest Work Order Arrival Window</label>
    <type>Text</type>
</CustomField>