unpackaged/main/default/objects/Job__c/fields/Earliest_Work_Order_by_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Earliest_Work_Order_by_Requested_Date__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Work Order for this Job that has the earliest &#39;Requested Date&#39;.</description>
    <inlineHelpText>The Work Order for this Job that has the earliest &#39;Requested Date&#39;.</inlineHelpText>
    <label>Earliest Work Order by Requested Date</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Jobs</relationshipLabel>
    <relationshipName>Jobs_Earliest_WO_Requested_Date</relationshipName>
    <type>Lookup</type>
</CustomField>