unpackaged/main/default/objects/Job__c/fields/Earliest_Work_Order_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Earliest_Work_Order_Requested_Date__c</fullName>
    <formula>Earliest_Work_Order_by_Requested_Date__r.Requested_Date__c</formula>
    <label>Earliest Work Order Requested Date</label>
    <type>Date</type>
</CustomField>