unpackaged/main/default/objects/Job__c/fields/Email_Estimate_Sent__c.field-meta.xml
<CustomField>
    <fullName>Email_Estimate_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Estimate Sent</label>
    <type>Checkbox</type>
</CustomField>