unpackaged/main/default/objects/Job__c/fields/Engineer_requests_Estimate_email_be_sent__c.field-meta.xml
<CustomField>
    <fullName>Engineer_requests_Estimate_email_be_sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To be ticked if the Engineer has requested that the Accept an Estimate email should be sent to the Customer.</description>
    <inlineHelpText>To be ticked if the Engineer has requested that the Accept an Estimate email should be sent to the Customer.</inlineHelpText>
    <label>Engineer requests Estimate email be sent</label>
    <type>Checkbox</type>
</CustomField>