unpackaged/main/default/objects/Job__c/fields/Estimate_Accepted_Email_Conf_Sent__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Accepted_Email_Conf_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To be ticked if the email was sent to the Customer confirming their acceptance of the Estimate.</description>
    <inlineHelpText>To be ticked if the email was sent to the Customer confirming their acceptance of the Estimate.</inlineHelpText>
    <label>Estimate Accepted–Email Conf. Sent</label>
    <type>Checkbox</type>
</CustomField>