unpackaged/main/default/objects/Job__c/fields/Estimate_Accepted_Email_Conf_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Accepted_Email_Conf_Sent_Date__c</fullName>
    <description>The date/time the email was sent to the Customer confirming their acceptance of the Estimate.</description>
    <inlineHelpText>The date/time the email was sent to the Customer confirming their acceptance of the Estimate.</inlineHelpText>
    <label>Estimate Accepted–Email Conf. Sent Date</label>
    <type>DateTime</type>
</CustomField>