unpackaged/main/default/objects/Job__c/fields/Estimate_Preferred_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Preferred_Date__c</fullName>
    <label>Estimate Preferred Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>