unpackaged/main/default/objects/Job__c/fields/ETC__c.field-meta.xml
<CustomField>
    <fullName>ETC__c</fullName>
    <description>Etc field added as per the request from Alex bacon</description>
    <label>ETC</label>
    <type>Date</type>
</CustomField>