unpackaged/main/default/objects/Job__c/fields/Feed_Back_Notes__c.field-meta.xml
<CustomField>
    <fullName>Feed_Back_Notes__c</fullName>
    <description>Customer feed back on pending estimates</description>
    <label>Feed Back Notes</label>
    <type>TextArea</type>
</CustomField>