unpackaged/main/default/objects/Job__c/fields/Final_WO_Is_the_Customer_Satisfied__c.field-meta.xml
<CustomField>
    <fullName>Final_WO_Is_the_Customer_Satisfied__c</fullName>
    <description>Not to appear on std user page layouts - to be set upon completion of final Work Order - if Yes, trigger process to send Customer Trust Pilot email.</description>
    <inlineHelpText>Not to appear on std user page layouts - to be set upon completion of final Work Order - if Yes, trigger process to send Customer Trust Pilot email.</inlineHelpText>
    <label>Final WO - Is the Customer Satisfied?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>