unpackaged/main/default/objects/Job__c/fields/FP_Requisition_Check__c.field-meta.xml
<CustomField>
    <fullName>FP_Requisition_Check__c</fullName>
    <label>FP Requisition Check</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Done</fullName>
            </value>
            <value>
                <fullName>Not required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>