unpackaged/main/default/objects/Job__c/fields/Generate_Cancellation_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Generate_Cancellation_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generate Cancellation Invoice</label>
    <type>Checkbox</type>
</CustomField>