unpackaged/main/default/objects/Job__c/fields/Go_Live_check__c.field-meta.xml
<CustomField>
    <fullName>Go_Live_check__c</fullName>
    <description>Going live picklist field</description>
    <label>Go Live check</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blank</fullName>
            </value>
            <value>
                <fullName>Correct</fullName>
            </value>
            <value>
                <fullName>Ops to fix</fullName>
            </value>
            <value>
                <fullName>Chumley to fix</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>