unpackaged/main/default/objects/Job__c/fields/Go_Live_Status__c.field-meta.xml
<CustomField>
    <fullName>Go_Live_Status__c</fullName>
    <label>Go Live Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P2 Complete</fullName>
            </value>
            <value>
                <fullName>P2 - In Siclops</fullName>
            </value>
            <value>
                <fullName>P1</fullName>
            </value>
            <value>
                <fullName>Online Booking - In Siclops</fullName>
            </value>
            <value>
                <fullName>Test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>