unpackaged/main/default/objects/Job__c/fields/GSR_Report_Sent__c.field-meta.xml
<CustomField>
    <fullName>GSR_Report_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GSR Report Sent</label>
    <type>Checkbox</type>
</CustomField>