unpackaged/main/default/objects/Job__c/fields/Info_No_of_WOs__c.field-meta.xml
<CustomField>
    <fullName>Info_No_of_WOs__c</fullName>
    <label>Info No. of WOs</label>
    <summaryForeignKey>Costs_and_Charges__c.Job__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>