unpackaged/main/default/objects/Job__c/fields/Invoice_Not_Required__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Not_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoice Not Required</label>
    <type>Checkbox</type>
</CustomField>