unpackaged/main/default/objects/Job__c/fields/Invoice_Not_Required_Reason__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Not_Required_Reason__c</fullName>
    <label>Invoice Not Required Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>