unpackaged/main/default/objects/Job__c/fields/is_Project__c.field-meta.xml
<CustomField>
    <fullName>is_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>is This Job a Project?</inlineHelpText>
    <label>is this job a Project?</label>
    <type>Checkbox</type>
</CustomField>