unpackaged/main/default/objects/Job__c/fields/Is_Work_Commencing_Immediately__c.field-meta.xml
<CustomField>
    <fullName>Is_Work_Commencing_Immediately__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ticked if work is commencing immediately</description>
    <inlineHelpText>Ticked if work is commencing immediately</inlineHelpText>
    <label>Is Work Commencing Immediately?</label>
    <type>Checkbox</type>
</CustomField>