unpackaged/main/default/objects/Job__c/fields/Job_Closure_Date__c.field-meta.xml
<CustomField>
    <fullName>Job_Closure_Date__c</fullName>
    <description>The date/time on which Job status becomes &quot;Closed&quot;</description>
    <inlineHelpText>The date/time on which Job status becomes &quot;Closed&quot;</inlineHelpText>
    <label>Job Closure Date</label>
    <type>DateTime</type>
</CustomField>