unpackaged/main/default/objects/Job__c/fields/Job_Description__c.field-meta.xml
<CustomField>
    <fullName>Job_Description__c</fullName>
    <description>The description of the works to be carried out.
This field will be populated by the &quot;Home Flow&quot;
and the &quot;FSL Reactive Referral Flow&quot;</description>
    <inlineHelpText>The description of the works to be carried out.
This field will be populated by the &quot;Home Flow&quot;
and the &quot;FSL Reactive Referral Flow&quot;</inlineHelpText>
    <label>Job Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>