unpackaged/main/default/objects/Job__c/fields/Job_Duration__c.field-meta.xml
<CustomField>
    <fullName>Job_Duration__c</fullName>
    <formula>Job_Duration_R1__c + Job_Duration_R2__c +  Job_Duration_R3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>