unpackaged/main/default/objects/Job__c/fields/Job_Duration_R3__c.field-meta.xml
<CustomField>
    <fullName>Job_Duration_R3__c</fullName>
    <label>Job Duration R3</label>
    <summarizedField>Costs_and_Charges__c.Chargeable_Duration_R3__c</summarizedField>
    <summaryForeignKey>Costs_and_Charges__c.Job__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>