unpackaged/main/default/objects/Job__c/fields/Job_Gross_Profit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Job_Gross_Profit_Amount__c</fullName>
    <description>Job Profit Amount - Charge_Total__c - Cost_Total__c - for Mark Cooper reporting</description>
    <formula>Charge_Net__c - Cost_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Job Profit Amount: (Charge Total - Cost Total)</inlineHelpText>
    <label>Job NET Profit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>