unpackaged/main/default/objects/Job__c/fields/Job_Month_and_Year__c.field-meta.xml
<CustomField>
    <fullName>Job_Month_and_Year__c</fullName>
    <formula>date( year(datevalue(CreatedDate)), month(datevalue(CreatedDate)), 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Month and Year</label>
    <type>Date</type>
</CustomField>