unpackaged/main/default/objects/Job__c/fields/Job_Raised_by__c.field-meta.xml
<CustomField>
    <fullName>Job_Raised_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Raised by</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Jobs</relationshipLabel>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>