unpackaged/main/default/objects/Job__c/fields/Job_Type__c.field-meta.xml
<CustomField>
    <fullName>Job_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Overall Job Work Type</description>
    <inlineHelpText>Overall Job Work Type</inlineHelpText>
    <label>Job Type</label>
    <referenceTo>WorkType</referenceTo>
    <relationshipLabel>Jobs</relationshipLabel>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>