unpackaged/main/default/objects/Job__c/fields/Job_Type_Trade__c.field-meta.xml
<CustomField>
    <fullName>Job_Type_Trade__c</fullName>
    <description>The Trade of the &#39;Job Type&#39; field - which is the Work Type</description>
    <formula>TEXT(Job_Type__r.Trade__c)</formula>
    <inlineHelpText>The Trade of the &#39;Job Type&#39; field - which is the Work Type</inlineHelpText>
    <label>Job Type Trade</label>
    <type>Text</type>
</CustomField>