unpackaged/main/default/objects/Job__c/fields/Journey_Comm_Sent__c.field-meta.xml
<CustomField>
    <fullName>Journey_Comm_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Journey Comm Sent</label>
    <type>Checkbox</type>
</CustomField>