unpackaged/main/default/objects/Job__c/fields/Key_Account_Check__c.field-meta.xml
<CustomField>
    <fullName>Key_Account_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Key Account Check</label>
    <type>Checkbox</type>
</CustomField>