unpackaged/main/default/objects/Job__c/fields/Key_Account_Estimate_Approval_Notes__c.field-meta.xml
<CustomField>
    <fullName>Key_Account_Estimate_Approval_Notes__c</fullName>
    <description>Notes will be entered here when a Key Account Estimate is approved manually by the office.</description>
    <inlineHelpText>Notes will be entered here when a Key Account Estimate is approved manually by the office.</inlineHelpText>
    <label>Key Account Estimate Approval Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>