unpackaged/main/default/objects/Job__c/fields/Key_Account_PO_Ref_Number__c.field-meta.xml
<CustomField>
    <fullName>Key_Account_PO_Ref_Number__c</fullName>
    <description>Maximum length 80 characters</description>
    <inlineHelpText>Maximum length 80 characters</inlineHelpText>
    <label>Key Account PO/Ref Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>