unpackaged/main/default/objects/Job__c/fields/Last_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Payment_Date__c</fullName>
    <description>Date of the last payment received related to an invoice for a Work Order that is related to this Job</description>
    <inlineHelpText>Date of the last payment received related to an invoice for a Work Order that is related to this Job</inlineHelpText>
    <label>Last Payment Date</label>
    <type>Date</type>
</CustomField>