unpackaged/main/default/objects/Job__c/fields/Number_of_All_Work_Orders__c.field-meta.xml
<CustomField>
    <fullName>Number_of_All_Work_Orders__c</fullName>
    <description>Total Number of Work Orders for this Job record (regardless of Status or Payment Status)</description>
    <inlineHelpText>Total Number of Work Orders for this Job record (regardless of Status or Payment Status)</inlineHelpText>
    <label>Number of All Work Orders</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>