unpackaged/main/default/objects/Job__c/fields/Number_of_WOs_in_Status_of_Complete__c.field-meta.xml
<CustomField>
    <fullName>Number_of_WOs_in_Status_of_Complete__c</fullName>
    <description>Total Number of Work Orders where Status=Complete</description>
    <inlineHelpText>Total Number of Work Orders where Status=Complete</inlineHelpText>
    <label>Number of WOs in Status of Complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>