unpackaged/main/default/objects/Job__c/fields/Number_of_WOs_Payment_Status_Paid__c.field-meta.xml
<CustomField>
    <fullName>Number_of_WOs_Payment_Status_Paid__c</fullName>
    <label>Number of WOs Payment Status=Paid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>