unpackaged/main/default/objects/Job__c/fields/Payment_Link_Sent_to_Customer_via_email__c.field-meta.xml
<CustomField>
    <fullName>Payment_Link_Sent_to_Customer_via_email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Link Sent to Customer via email</label>
    <type>Checkbox</type>
</CustomField>