unpackaged/main/default/objects/Job__c/fields/Payment_Request_Email_Outstanding_Sent__c.field-meta.xml
<CustomField>
    <fullName>Payment_Request_Email_Outstanding_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Email Customer Payment Request for Outstanding WOs has been sent (ticked)</description>
    <inlineHelpText>Email Customer Payment Request for Outstanding WOs has been sent (ticked)</inlineHelpText>
    <label>Payment Request Email Outstanding Sent</label>
    <type>Checkbox</type>
</CustomField>