unpackaged/main/default/objects/Job__c/fields/Payment_Value__c.field-meta.xml
<CustomField>
    <fullName>Payment_Value__c</fullName>
    <label>Payment Value</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>