unpackaged/main/default/objects/Job__c/fields/PM_Name__c.field-meta.xml
<CustomField>
    <fullName>PM_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The name of the Project Manager for this Job record if one is required.</description>
    <inlineHelpText>The name of the Project Manager for this Job record if one is required.</inlineHelpText>
    <label>PM Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Jobs_Project_Manager</relationshipName>
    <type>Lookup</type>
</CustomField>