unpackaged/main/default/objects/Job__c/fields/Profit_Margin_new__c.field-meta.xml
<CustomField>
    <fullName>Profit_Margin_new__c</fullName>
    <formula>Profit_Margin__c /  Charge_Net__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profit Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>