unpackaged/main/default/objects/Job__c/fields/Project_Managed__c.field-meta.xml
<CustomField>
    <fullName>Project_Managed__c</fullName>
    <description>Is the Job being Project Managed or Not?</description>
    <inlineHelpText>Is the Job being Project Managed or Not?</inlineHelpText>
    <label>Project Managed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Project Managed</fullName>
                <default>true</default>
                <label>Not Project Managed</label>
            </value>
            <value>
                <fullName>Project Managed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>