unpackaged/main/default/objects/Job__c/fields/Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PM if the Job Charge Total is &gt;=£2000 AND this must be a Service Resource, (not a User).</description>
    <inlineHelpText>Project Manager if the Job Charge Total is &gt;=£2000 AND this must be a Service Resource, (not a User).</inlineHelpText>
    <label>Project Manager (Dont Use)</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>Jobs</relationshipLabel>
    <relationshipName>Project_Manager_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>