unpackaged/main/default/objects/Job__c/fields/Project_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Manager Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Profile_Name__c</field>
            <operation>contains</operation>
            <value>Manager</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Jobs1</relationshipName>
    <type>Lookup</type>
</CustomField>