unpackaged/main/default/objects/Job__c/fields/Promotors__c.field-meta.xml
<CustomField>
    <fullName>Promotors__c</fullName>
    <formula>IF(Rating__c &gt;=9 &amp;&amp; Rating__c &lt;=10,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Promotors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>