unpackaged/main/default/objects/Job__c/fields/Property_Address__c.field-meta.xml
<CustomField>
    <fullName>Property_Address__c</fullName>
    <formula>IF( ISBLANK(Site__r.Site_Street__c) , &quot;&quot;,Site__r.Site_Street__c &amp;BR() )&amp;
IF( ISBLANK(Site__r.Site_City__c) , &quot;&quot;,Site__r.Site_City__c &amp;BR() )&amp;
IF( ISBLANK(Site__r.Site_State__c) , &quot;&quot;,Site__r.Site_State__c &amp;BR() )&amp;
IF( ISBLANK(Site__r.Site_PostalCode__c) , &quot;&quot;,Site__r.Site_PostalCode__c &amp;BR() )&amp;
IF( ISBLANK(Site__r.Site_Country__c) , &quot;&quot;,Site__r.Site_Country__c &amp;BR() )</formula>
    <label>Property Address</label>
    <type>Text</type>
</CustomField>