unpackaged/main/default/objects/Job__c/fields/Raised_by_Service_Resource__c.field-meta.xml
<CustomField>
    <fullName>Raised_by_Service_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Raised by Service Resource</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>Jobs (Raised by Service Resource)</relationshipLabel>
    <relationshipName>Jobs_Raised_by_Service_Resource</relationshipName>
    <type>Lookup</type>
</CustomField>