unpackaged/main/default/objects/Job__c/fields/Raised_from_Job__c.field-meta.xml
<CustomField>
    <fullName>Raised_from_Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Raised from Job</label>
    <referenceTo>Job__c</referenceTo>
    <relationshipLabel>Jobs (Raised from Job)</relationshipLabel>
    <relationshipName>Jobs1</relationshipName>
    <type>Lookup</type>
</CustomField>