unpackaged/main/default/objects/Job__c/fields/Raised_from_Root_Job__c.field-meta.xml
<CustomField>
    <fullName>Raised_from_Root_Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Raised from Root Job</label>
    <referenceTo>Job__c</referenceTo>
    <relationshipLabel>Jobs(Raised from Root Job)</relationshipLabel>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>