unpackaged/main/default/objects/Job__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <description>This rating is provided by MC via SMS from customer</description>
    <label>Rating</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>