unpackaged/main/default/objects/Job__c/fields/Rating_Valid_or_Invalid__c.field-meta.xml
<CustomField>
    <fullName>Rating_Valid_or_Invalid__c</fullName>
    <formula>IF( Rating__c &gt;=0 &amp;&amp; Rating__c &lt;=10,1,0)</formula>
    <label>Rating Valid or Invalid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>