unpackaged/main/default/objects/Job__c/fields/rcs_label__c.field-meta.xml
<CustomField>
    <fullName>rcs_label__c</fullName>
    <formula>Name&amp;&#39;: &#39;&amp; Site__r.Name &amp;&#39; - &#39;&amp;  Key_Account_PO_Ref_Number__c   &amp;&#39; - &#39;&amp;Text(Charge_Net__c *1.2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>rcs_label</label>
    <type>Text</type>
</CustomField>