unpackaged/main/default/objects/Job__c/fields/Reactive_Referral_Acceptance_URL__c.field-meta.xml
<CustomField>
    <fullName>Reactive_Referral_Acceptance_URL__c</fullName>
    <formula>IF($Organization.Id = &#39;00D3H0000000ivA&#39;,&quot;https://aspect.co.uk&quot;,&quot;https://aspect.co.uk.hyv.gotest.it&quot;)&amp;
&quot;/forms/confirm-your-booking/?id=&quot;&amp; Id &amp;
&quot;&amp;job=&quot;&amp; Name &amp;
&quot;&amp;acc=&quot;&amp; Account__r.Account_Reference__c &amp;
&quot;&amp;nam=&quot;&amp;SUBSTITUTE( Account__r.Name , &quot; &quot;, &quot;%20&quot;)&amp;
&quot;&amp;wo=&quot;&amp;Earliest_Work_Order_by_Requested_Date__c&amp;
&quot;&amp;l4d=&quot;&amp; RIGHT( Authorisation__r.asp04__Account_Reference__c , 4) &amp;
&quot;&amp;f1=&quot;&amp; TEXT(MOD( FLOOR(Card_on_Record_Start__c ),8)) &amp;
&quot;&amp;f2=&quot;&amp; TEXT(MOD( FLOOR(Card_on_Record_Start__c /8),8)) &amp;
&quot;&amp;f3=&quot;&amp; TEXT(MOD( FLOOR(Card_on_Record_Start__c /(8*8)),8)) &amp;
&quot;&amp;f4=&quot;&amp; TEXT(MOD( FLOOR(Card_on_Record_Start__c /(8*8*8)),8)) &amp;
&quot;&amp;f5=&quot;&amp; TEXT(MOD( FLOOR(Card_on_Record_Start__c /(8*8*8*8)),8))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reactive Referral Acceptance URL</label>
    <type>Text</type>
</CustomField>