unpackaged/main/default/objects/Job__c/fields/Referral_email_sent__c.field-meta.xml
<CustomField>
    <fullName>Referral_email_sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Referral email sent</label>
    <type>Checkbox</type>
</CustomField>