unpackaged/main/default/objects/Job__c/fields/Referral_Status_Before_Payment__c.field-meta.xml
<CustomField>
    <fullName>Referral_Status_Before_Payment__c</fullName>
    <label>Referral Status Before Payment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>